seaqt/QtWidgets/gen_qcheckbox.h

class QCheckBox;
class QEvent;
class QMetaObject;
class QPaintEvent;
class QPoint;
class QSize;
class QWidget;
typedef struct QCheckBox QCheckBox;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QCheckBox_override_virtual_initPainter(void* self, intptr_t slot);
bool QCheckBox_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QCheckBox_virtualbase_redirected(const void* self, QPoint* offset);
bool QCheckBox_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QCheckBox_virtualbase_sharedPainter(const void* self);
bool QCheckBox_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QCheckBox_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QCheckBox_virtualbase_inputMethodQuery(const void* self, int param1);
bool QCheckBox_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QCheckBox_virtualbase_focusNextPrevChild(void* self, bool next);
bool QCheckBox_override_virtual_eventFilter(void* self, intptr_t slot);
bool QCheckBox_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QCheckBox_override_virtual_childEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_childEvent(void* self, QChildEvent* event);
bool QCheckBox_override_virtual_customEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_customEvent(void* self, QEvent* event);
bool QCheckBox_override_virtual_connectNotify(void* self, intptr_t slot);
void QCheckBox_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QCheckBox_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QCheckBox_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QCheckBox_delete(QCheckBox* self);