seaqt/QtWidgets/gen_qcheckbox.nim

proc fcQCheckBox_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_initPainter".}
proc fQCheckBox_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QCheckBox_virtualbase_redirected".}
proc fcQCheckBox_override_virtual_redirected(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_redirected".}
proc fQCheckBox_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QCheckBox_virtualbase_sharedPainter".}
proc fcQCheckBox_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_sharedPainter".}
proc fQCheckBox_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QCheckBox_virtualbase_inputMethodEvent".}
proc fcQCheckBox_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_inputMethodEvent".}
proc fQCheckBox_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QCheckBox_virtualbase_inputMethodQuery".}
proc fcQCheckBox_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_inputMethodQuery".}
proc fQCheckBox_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QCheckBox_virtualbase_focusNextPrevChild".}
proc fcQCheckBox_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_focusNextPrevChild".}
proc fQCheckBox_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QCheckBox_virtualbase_eventFilter".}
proc fcQCheckBox_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_eventFilter".}
proc fQCheckBox_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_childEvent".}
proc fcQCheckBox_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_childEvent".}
proc fQCheckBox_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_customEvent".}
proc fcQCheckBox_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_customEvent".}
proc fQCheckBox_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QCheckBox_virtualbase_connectNotify".}
proc fcQCheckBox_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_connectNotify".}
proc fQCheckBox_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QCheckBox_virtualbase_disconnectNotify".}
proc fcQCheckBox_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_disconnectNotify".}
proc fcQCheckBox_delete(self: pointer) {.importc: "QCheckBox_delete".}


func init*(T: type gen_qcheckbox_types.QCheckBox, h: ptr cQCheckBox): gen_qcheckbox_types.QCheckBox =
  T(h: h)
proc create*(T: type gen_qcheckbox_types.QCheckBox, parent: gen_qwidget_types.QWidget): gen_qcheckbox_types.QCheckBox =
  gen_qcheckbox_types.QCheckBox.init(fcQCheckBox_new(parent.h))

proc create*(T: type gen_qcheckbox_types.QCheckBox, ): gen_qcheckbox_types.QCheckBox =
  gen_qcheckbox_types.QCheckBox.init(fcQCheckBox_new2())

proc create*(T: type gen_qcheckbox_types.QCheckBox, text: string): gen_qcheckbox_types.QCheckBox =
  gen_qcheckbox_types.QCheckBox.init(fcQCheckBox_new3(struct_miqt_string(data: text, len: csize_t(len(text)))))

proc create*(T: type gen_qcheckbox_types.QCheckBox, text: string, parent: gen_qwidget_types.QWidget): gen_qcheckbox_types.QCheckBox =
  gen_qcheckbox_types.QCheckBox.init(fcQCheckBox_new4(struct_miqt_string(data: text, len: csize_t(len(text))), parent.h))

proc metaObject*(self: gen_qcheckbox_types.QCheckBox, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQCheckBox_metaObject(self.h))

proc metacast*(self: gen_qcheckbox_types.QCheckBox, param1: cstring): pointer =
  fcQCheckBox_metacast(self.h, param1)

proc tr*(_: type gen_qcheckbox_types.QCheckBox, s: cstring): string =
  let v_ms = fcQCheckBox_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qcheckbox_types.QCheckBox, s: cstring): string =
  let v_ms = fcQCheckBox_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc sizeHint*(self: gen_qcheckbox_types.QCheckBox, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQCheckBox_sizeHint(self.h))

proc minimumSizeHint*(self: gen_qcheckbox_types.QCheckBox, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQCheckBox_minimumSizeHint(self.h))

proc setTristate*(self: gen_qcheckbox_types.QCheckBox, ): void =
  fcQCheckBox_setTristate(self.h)

proc isTristate*(self: gen_qcheckbox_types.QCheckBox, ): bool =
  fcQCheckBox_isTristate(self.h)

proc checkState*(self: gen_qcheckbox_types.QCheckBox, ): cint =
  cint(fcQCheckBox_checkState(self.h))

proc setCheckState*(self: gen_qcheckbox_types.QCheckBox, state: cint): void =
  fcQCheckBox_setCheckState(self.h, cint(state))

proc stateChanged*(self: gen_qcheckbox_types.QCheckBox, param1: cint): void =
  fcQCheckBox_stateChanged(self.h, param1)

type QCheckBoxstateChangedSlot* = proc(param1: cint)
proc miqt_exec_callback_QCheckBox_stateChanged(slot: int, param1: cint) {.exportc.} =
  let nimfunc = cast[ptr QCheckBoxstateChangedSlot](cast[pointer](slot))
  let slotval1 = param1

  nimfunc[](slotval1)

proc onstateChanged*(self: gen_qcheckbox_types.QCheckBox, slot: QCheckBoxstateChangedSlot) =
  var tmp = new QCheckBoxstateChangedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQCheckBox_connect_stateChanged(self.h, cast[int](addr tmp[]))

proc tr*(_: type gen_qcheckbox_types.QCheckBox, s: cstring, c: cstring): string =
  let v_ms = fcQCheckBox_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qcheckbox_types.QCheckBox, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQCheckBox_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qcheckbox_types.QCheckBox, s: cstring, c: cstring): string =
  let v_ms = fcQCheckBox_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qcheckbox_types.QCheckBox, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQCheckBox_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setTristate*(self: gen_qcheckbox_types.QCheckBox, y: bool): void =
  fcQCheckBox_setTristate1(self.h, y)

proc QCheckBoxsizeHint*(self: gen_qcheckbox_types.QCheckBox, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fQCheckBox_virtualbase_sizeHint(self.h))

type QCheckBoxsizeHintProc* = proc(): gen_qsize_types.QSize
proc onsizeHint*(self: gen_qcheckbox_types.QCheckBox, slot: QCheckBoxsizeHintProc) =
  # TODO check subclass
  var tmp = new QCheckBoxsizeHintProc
  tmp[] = slot
  GC_ref(tmp)
  fcQCheckBox_override_virtual_sizeHint(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QCheckBox_sizeHint(self: ptr cQCheckBox, slot: int): pointer {.exportc: "miqt_exec_callback_QCheckBox_sizeHint ".} =
  var nimfunc = cast[ptr QCheckBoxsizeHintProc](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
proc QCheckBoxminimumSizeHint*(self: gen_qcheckbox_types.QCheckBox, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fQCheckBox_virtualbase_minimumSizeHint(self.h))

type QCheckBoxminimumSizeHintProc* = proc(): gen_qsize_types.QSize
proc onminimumSizeHint*(self: gen_qcheckbox_types.QCheckBox, slot: QCheckBoxminimumSizeHintProc) =
  # TODO check subclass
  var tmp = new QCheckBoxminimumSizeHintProc
  tmp[] = slot
  GC_ref(tmp)
  fcQCheckBox_override_virtual_minimumSizeHint(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QCheckBox_minimumSizeHint(self: ptr cQCheckBox, slot: int): pointer {.exportc: "miqt_exec_callback_QCheckBox_minimumSizeHint ".} =
  var nimfunc = cast[ptr QCheckBoxminimumSizeHintProc](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
proc QCheckBoxevent*(self: gen_qcheckbox_types.QCheckBox, e: gen_qcoreevent_types.QEvent): bool =
  fQCheckBox_virtualbase_event(self.h, e.h)

type QCheckBoxeventProc* = proc(e: gen_qcoreevent_types.QEvent): bool
proc onevent*(self: gen_qcheckbox_types.QCheckBox, slot: QCheckBoxeventProc) =
  # TODO check subclass
  var tmp = new QCheckBoxeventProc
  tmp[] = slot
  GC_ref(tmp)
  fcQCheckBox_override_virtual_event(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QCheckBox_event(self: ptr cQCheckBox, slot: int, e: pointer): bool {.exportc: "miqt_exec_callback_QCheckBox_event ".} =
  var nimfunc = cast[ptr QCheckBoxeventProc](cast[pointer](slot))
  let slotval1 = gen_qcoreevent_types.QEvent(h: e)


  let virtualReturn = nimfunc[](slotval1 )

  virtualReturn
proc QCheckBoxhitButton*(self: gen_qcheckbox_types.QCheckBox, pos: gen_qpoint_types.QPoint): bool =
  fQCheckBox_virtualbase_hitButton(self.h, pos.h)

type QCheckBoxhitButtonProc* = proc(pos: gen_qpoint_types.QPoint): bool
proc onhitButton*(self: gen_qcheckbox_types.QCheckBox, slot: QCheckBoxhitButtonProc) =
  # TODO check subclass
  var tmp = new QCheckBoxhitButtonProc
  tmp[] = slot
  GC_ref(tmp)
  fcQCheckBox_override_virtual_hitButton(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QCheckBox_hitButton(self: ptr cQCheckBox, slot: int, pos: pointer): bool {.exportc: "miqt_exec_callback_QCheckBox_hitButton ".} =
  var nimfunc = cast[ptr QCheckBoxhitButtonProc](cast[pointer](slot))
  let slotval1 = gen_qpoint_types.QPoint(h: pos)


  let virtualReturn = nimfunc[](slotval1 )

  virtualReturn
proc QCheckBoxcheckStateSet*(self: gen_qcheckbox_types.QCheckBox, ): void =
  fQCheckBox_virtualbase_checkStateSet(self.h)

type QCheckBoxcheckStateSetProc* = proc(): void
proc oncheckStateSet*(self: gen_qcheckbox_types.QCheckBox, slot: QCheckBoxcheckStateSetProc) =
  # TODO check subclass
  var tmp = new QCheckBoxcheckStateSetProc
  tmp[] = slot
  GC_ref(tmp)
  fcQCheckBox_override_virtual_checkStateSet(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QCheckBox_checkStateSet(self: ptr cQCheckBox, slot: int): void {.exportc: "miqt_exec_callback_QCheckBox_checkStateSet ".} =
  var nimfunc = cast[ptr QCheckBoxcheckStateSetProc](cast[pointer](slot))

  nimfunc[]()
proc QCheckBoxnextCheckState*(self: gen_qcheckbox_types.QCheckBox, ): void =
  fQCheckBox_virtualbase_nextCheckState(self.h)

type QCheckBoxnextCheckStateProc* = proc(): void
proc onnextCheckState*(self: gen_qcheckbox_types.QCheckBox, slot: QCheckBoxnextCheckStateProc) =
  # TODO check subclass
  var tmp = new QCheckBoxnextCheckStateProc
  tmp[] = slot
  GC_ref(tmp)
  fcQCheckBox_override_virtual_nextCheckState(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QCheckBox_nextCheckState(self: ptr cQCheckBox, slot: int): void {.exportc: "miqt_exec_callback_QCheckBox_nextCheckState ".} =
  var nimfunc = cast[ptr QCheckBoxnextCheckStateProc](cast[pointer](slot))

  nimfunc[]()
proc QCheckBoxpaintEvent*(self: gen_qcheckbox_types.QCheckBox, param1: gen_qevent_types.QPaintEvent): void =
  fQCheckBox_virtualbase_paintEvent(self.h, param1.h)

type QCheckBoxpaintEventProc* = proc(param1: gen_qevent_types.QPaintEvent): void
proc onpaintEvent*(self: gen_qcheckbox_types.QCheckBox, slot: QCheckBoxpaintEventProc) =
  # TODO check subclass
  var tmp = new QCheckBoxpaintEventProc
  tmp[] = slot
  GC_ref(tmp)
  fcQCheckBox_override_virtual_paintEvent(self.h, cast[int](addr tmp[]))
